--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
 Flask==2.3.2
+flask-cors==4.0.0
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
 pymongo==4.4.0
 python-dotenv==1.0.0
 flask-cors==4.0.0
+gunicorn==21.2.0
+
+Authlib==1.3.0
+
+google-auth==2.27.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
