--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.3.2
 flask-cors==4.0.0
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.6.0
+Flask-PyMongo==2.3.0
 pymongo==4.4.0
 python-dotenv==1.0.0
 flask-cors==4.0.0
