--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,38 @@
+# Flask==3.0.0
+# flask-cors==4.0.0
+# Flask-Bcrypt==1.0.1
+# Flask-JWT-Extended==4.6.0
+# python-dotenv==1.0.1
+
+# pymongo==4.6.0
+# dnspython==2.4.2
+# PyMongo==1.16.0
+# Authlib==1.3.0
+
+# google-auth==2.27.0
+# google-auth-oauthlib==1.2.0
+# google-auth-httplib2==0.2.0
+
+# cloudinary==1.39.0
+
+# requests==2.31.0
+
+# PyJWT==2.8.0
+
+# gunicorn==21.2.0
+
 Flask==3.0.0
 flask-cors==4.0.0
-Flask-Bcrypt==1.0.1
-Flask-JWT-Extended==4.6.0
+flask-bcrypt==1.0.1
+flask-jwt-extended==4.6.0
+flask-pymongo==2.3.0
+
+pymongo==4.6.1
 python-dotenv==1.0.1
 
-pymongo==4.6.0
-dnspython==2.4.2
-PyMongo==1.16.0
 Authlib==1.3.0
-
-google-auth==2.27.0
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
-
-cloudinary==1.39.0
-
 requests==2.31.0
-
-PyJWT==2.8.0
+cryptography==42.0.5
+bson==0.5.10
 
 gunicorn==21.2.0
